# EasyScanlate

./: .gitignore  README.md  changelog.md  main.py  minimal_module_requirements.txt  pyproject.toml  requirements.txt  todo.md  ui_test.py  update.bat
.cursor/plans/: custom-error-dialog-30c05412.plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_duplicate_issues.py  test_traceback_detection.py
.github/workflows/: README.md  check-duplicate-issues.yml  main.yml
app/core/: project_model.py
app/handlers/: __init__.py  context_fill_handler.py  manual_ocr_handler.py  ocr_batch_handler.py  split_handler.py  stitch_handler.py
app/ui/components/: find_replace.py  results_tables.py  translation_chat.py
app/ui/components/image_area/: scroll_container.py
app/ui/components/textbox_style/: panel.py  shape_panel.py  typography_panel.py
app/ui/dialogs/: __init__.py  error_dialog.py  import_export_dialog.py  settings_dialog.py
app/ui/window/: chrome.py  home_window.py  main_window.py  translation_window.py
app/utils/: exception_handler.py  file_io.py  project_processing.py  update.py
assets/: __init__.py  advanced_check.qss  build_prod_qss.py  delete_row.qss  find_replace.qss  home.qss  home_left_layout.qss  import_export.qss  iv_button.qss  main.qss  manual_ocr.qss  menu.qss  new_project.qss  qss_variables_preprocessor.py  right_widget.qss  shape_panel.qss  simple_view.qss  styles.py  styles4.py  text_box_panel.qss  typography_panel.qss  variables.qssvars  wfwf.qss
assets/processed/: advanced_check.qss  delete_row.qss  find_replace.qss  home.qss  home_left_layout.qss  iv_button.qss  main.qss  menu.qss  new_project.qss  right_widget.qss  simple_view.qss  wfwf.qss
dev/installer/: installer-with-updater-draft.nsi  installer.nsi
dev/updater/: create_update_package.py  updater.py
