[project]
name = "easyscanlate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "beautifulsoup4==4.13.5",
    "brotli==1.1.0",
    "bsdiff4==1.2.6",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "easyocr==1.7.2",
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "google-auth==2.40.3",
    "google-genai==1.38.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "inflate64==1.0.3",
    "jinja2==3.1.4",
    "lazy-loader==0.4",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "multivolumefile==0.2.3",
    "networkx==3.3",
    "ninja==1.13.0",
    "numpy==2.1.2",
    "opencv-python-headless==4.12.0.88",
    "packaging==25.0",
    "pillow==11.3.0",
    "psutil==7.1.0",
    "py7zr==1.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybcj==1.0.6",
    "pyclipper==1.3.0.post6",
    "pycryptodomex==3.23.0",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pynput==1.8.1",
    "pyppmd==1.2.0",
    "pyside6==6.9.2",
    "pyside6-addons==6.9.2",
    "pyside6-essentials==6.9.2",
    "python-bidi==0.6.6",
    "pyyaml==6.0.2",
    "pyzstd==0.17.0",
    "qtawesome==1.4.0",
    "qtpy==2.4.3",
    "requests==2.32.5",
    "rsa==4.9.1",
    "scikit-image==0.25.2",
    "scipy==1.16.2",
    "setuptools==70.2.0",
    "shapely==2.1.1",
    "shiboken6==6.9.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "texttable==1.7.0",
    "tifffile==2025.9.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "zstandard==0.25.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
